# git-pulse

./: .dockerignore  .gitignore  .mcp.json  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.cursor/: settings.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  database.py  git_analyzer.py  main.py  models.py  schemas.py
backend/app/api/: projects.py
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/api/: projects.js
frontend/src/components/: ActivityChart.jsx  AddProjectModal.jsx  ProjectCard.jsx
frontend/src/pages/: Dashboard.jsx
src/git_pulse/: __init__.py  main.py
tests/: __init__.py  test_main.py
